--- a/src/gui/view/FrmNovUgovor.form
+++ b/src/gui/view/FrmNovUgovor.form
@@ -66,7 +66,7 @@
                       <Component id="btnZapamtiUgovor" min="-2" pref="124" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="29" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="panelUsluge" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
