--- a/src/gui/view/FrmNovUgovor.form
+++ b/src/gui/view/FrmNovUgovor.form
@@ -164,6 +164,9 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="txtBr">
+      <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtBrFocusLost"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
